29 June 2023: Wouter
	- Fix python modules with multiple scripts, by incrementing reference
	  counts.

27 June 2023: George
	- Merge #892: Add cachedb hit stat. Introduces 'num.query.cachedb' as
	  a new statistical counter.
	- Remove warning about unknown cast-function-type warning pragma.

22 June 2023: Wouter
	- Merge #903: contrib: add yocto compatible init script.

15 June 2023: Philip
	- Fix for issue #887 (Timeouts to forward servers on BSD based
	  system with ASLR)
	- Probably fixes #516 (Stream reuse does not work on Windows) as well

14 June 2023: George
	- Properly handle all return values of worker_check_request during
	  early EDE code.
	- Do not check the incoming request more than once.

12 June 2023: Wouter
	- Merge #896: Fix: #895: pythonmodule: add all site-packages
	  directories to sys.path.
	- Fix #895: python + sysconfig gives ANOTHER path comparing to
	  distutils.
	- Fix for uncertain unit test for doh buffer size events.

25 May 2023: Wouter
	- Fix unbound-dnstap-socket printout when no query is present.
	- Fix unbound-dnstap-socket time fraction conversion for printout.

19 May 2023: Wouter
	- Fix RPZ removal of client-ip, nsip, nsdname triggers from IXFR.
	- Fix to remove unused variables from RPZ clientip data structure.

16 May 2023: Wouter
	- Fix #888: [FR] Use kernel timestamps for dnstap.
	- Fix to print debug log for ancillary data with correct IP address.

11 May 2023: Wouter
	- Fix warning in windows compile, in set_recvtimestamp.

4 May 2023: Wouter
	- Fix #885: Error: util/configlexer.c: No such file or directory,
	  adds error messages explaining to install flex and bison.
	- Fix to remove unused whitespace from acx_nlnetlabs.m4 and config.h.
	- Fix doxygen in addr_to_nat64 header definition.

1 May 2023: George
	- Merge #722 from David 'eqvinox' Lamparter: NAT64 support.
	- For #722: minor fixes, formatting, refactoring.

1 May 2023: Wouter
	- Fix RPZ IP responses with trigger rpz-drop on cache entries, that